# pytest-snapshot-django-orm

./: .gitignore  README.md  compose.yml
django_app/: .gitignore  pyproject.toml
django_app/django_app/: settings.py
pytest-django-capquery/: pyproject.toml
