[project]
name = "django-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "pytest-django-capquery",
]

[tool.uv.sources]
pytest-django-capquery = { path = "../pytest-django-capquery" }
