[project]
name = "pytest-django-capquery"
version = "0.1a.0"
description = "Pytest capture Django ORM queries"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]
classifiers = [
    "Framework :: Pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points.pytest11]
django-capquery = "pytest_django_capquery.plugin"
